--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = ">=3.8,<3.11"
 tqdm = "^4.64.1"
 datasketch = "^1.5.8"
 more-itertools = "^9.0.0"
+joblib = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
